Some Work. Looks Decent but graph not implemented